<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HighScoresScreen"
    android:background="@color/black" >
	<RelativeLayout 
	android:id="@+id/wrapper"    
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/static_background"
    >

	<TextView
	    style="@style/title_style"
	   	android:id="@+id/title"
	    android:layout_margin="5dp"
	    android:gravity="center"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:text="@string/high_scores" />
    <LinearLayout 
        android:layout_margin="5dp"
        android:id="@+id/score_pad"
        android:orientation="vertical"
        style="@style/fill_parent"
  		android:gravity="center"
        >

        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView               
             android:text="@string/one" 
              android:layout_weight="20"
			style="@style/custom_textview"
			/>            

            <TextView
                android:id="@+id/high_scorer"
                style="@style/custom_textview"
                android:layout_weight="50"
                android:text="@string/empty" />

            <TextView
                style="@style/custom_textview"
                android:layout_weight="30"
                android:text="@string/empty" />

        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/custom_textview"
                android:layout_weight="20"
                android:text="@string/two" />
            
            <TextView
                style="@style/custom_textview"
                android:layout_weight="50"
                android:text="@string/empty" />

            <TextView
                style="@style/custom_textview"
                android:layout_weight="30"
                android:text="@string/empty" />

        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/custom_textview"
                android:layout_weight="20"
                android:text="@string/three" />
            
            <TextView
                style="@style/custom_textview"
                android:layout_weight="50"
                android:text="@string/empty" />

            <TextView
                style="@style/custom_textview"
                android:layout_weight="30"
                android:text="@string/empty" />

        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/custom_textview"
                android:layout_weight="20"
                android:text="@string/four" />
            
            <TextView
                style="@style/custom_textview"
                android:layout_weight="50"
                android:text="@string/empty" />

            <TextView
                style="@style/custom_textview"
                android:layout_weight="30"
                android:text="@string/empty" />

        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/custom_textview"
                android:layout_weight="20"
                android:text="@string/five" />
            
            <TextView
                style="@style/custom_textview"
                android:layout_weight="50"
                android:text="@string/empty" />

            <TextView
                style="@style/custom_textview"
                android:layout_weight="30"
                android:text="@string/empty" />

        </LinearLayout>      
    </LinearLayout>
    	<Button
	    style="@style/button_style"
	    android:layout_alignParentBottom="true"
	    android:layout_margin="5dp"
	    android:onClick="clearHighScores"
	    android:text="@string/clear_scores" />
	</RelativeLayout>
  
</RelativeLayout>