<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".AboutScreen"
android:background="@color/black" >
	<RelativeLayout 
	android:id="@+id/pad"    
    style="@style/fill_parent"
    android:background="@drawable/custom_button">
	    <TextView
        android:id="@+id/title0"
        style="@style/title_style"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="About" />
    	<ScrollView 
        android:layout_below="@+id/title0"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fadeScrollbars="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    		<LinearLayout 
        	android:orientation="vertical"
       		style="@style/fill_parent">
       			<LinearLayout
           		style="@style/content_wrapper_style">
           			<LinearLayout 
               		style="@style/fill_parent">
               			<View 
                   		style="@style/ball_icon_style"
                        android:background="@drawable/custom_ball"/>
    					<TextView 
 				       	android:id="@+id/title1"
        				style="@style/subtitle_style"
        				android:text="TicTacToe"
        				/>
               			<View 
                   		style="@style/ball_icon_style"
                   		android:background="@drawable/custom_ball1"/>
           			</LinearLayout>
        			<TextView             
            		style="@style/paragraph_style"
            		android:text="@string/about_app"
            		/>
        			</LinearLayout>
            			<LinearLayout
           				style="@style/content_wrapper_style">
           					<LinearLayout 
               				style="@style/fill_parent">
               					<View 
								style="@style/ball_icon_style"
                   				android:background="@drawable/custom_ball"/>
    							<TextView
        						android:id="@+id/title2"
        						style="@style/subtitle_style"
        						android:text="Developer" 
								/>
               					<View 
                   				style="@style/ball_icon_style"
                   				android:background="@drawable/custom_ball1"/>
           					</LinearLayout>
        					<TextView
        					style="@style/paragraph_style"    
            				android:autoLink="all"
            				android:text="@string/developer"
            		 		/>
        				</LinearLayout>
               		<LinearLayout
           			style="@style/content_wrapper_style">
           				<LinearLayout 
               			style="@style/fill_parent">
               				<View 
							style="@style/ball_icon_style"
                   			android:background="@drawable/custom_ball"/>
					    	<TextView
        					android:id="@+id/title"
        					style="@style/subtitle_style"
        					android:text="Share app" 
        					/>
               				<View 
                   			style="@style/ball_icon_style"
                   			android:background="@drawable/custom_ball1"/>
           				</LinearLayout>
					<LinearLayout 
    				style="@style/fill_parent"
   				 	android:orientation="vertical">
               			<LinearLayout 
               			    android:background="@drawable/static_background"
               			    style="@style/wrap_content"
               			    android:layout_marginTop="3dp"
               			    android:layout_width="fill_parent"
               			    android:orientation="vertical">
                       		<TextView
                       		    android:layout_marginTop="10dp"
           			   		android:textColor="@color/white"
           			   		android:layout_width="fill_parent"
           			   		android:layout_height="wrap_content"
           			   		android:gravity="center"
           			   		android:textSize="16dp"           	      
                       		android:text="@string/share_us"
                        	/>
                       		<LinearLayout 
                       		android:gravity="center"    
                       		style="@style/wrap_content"                       
                       		android:layout_margin="3dp"
                       		android:layout_width="fill_parent"
                       		android:orientation="horizontal">
                       			<View 
                       			style="@style/icon_style"
                       			android:background="@drawable/facebook"
                       			android:id="@+id/facebook"/>
        						<View 
            					style="@style/icon_style"
                   				android:background="@drawable/google_plus"
                   				android:id="@+id/gplus"/>
        						<View 
            					style="@style/icon_style"
                   				android:background="@drawable/twitter"
                   				android:id="@+id/twitter"/>
        					</LinearLayout>
        				</LinearLayout>
					</LinearLayout>
        		</LinearLayout>       
    		</LinearLayout>
    	</ScrollView>
	</RelativeLayout>
</RelativeLayout>